--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -56,7 +56,8 @@
                 <h3><b>LLM: Fine-tuned Falcon-7B LLM with QLoRA on a Custom Dataset</b></h3>
                 <p>
                     Fine-tuned a large language model, Falcon, with 7 billion parameters on a custom dataset using
-                    QLoRA, specifically Chatbot customer support FAQs from an E-commerce website. Implemented a QLoRA adaptor and conducted the fine-tuning process.
+                    QLoRA, specifically Chatbot customer support FAQs from an E-commerce website. Implemented a QLoRA
+                    adaptor and conducted the fine-tuning process.
                     Compared the performance of the untrained and trained models by evaluating their responses to
                     various prompts. Uploaded the trained model to the Hugging Face Hub for later consumption.
                 </p>
@@ -91,9 +92,9 @@
                 <p>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_distilbert.ipynb"><b>View
-                            Distibert Notebook</b></a>, <a
+                            DistilBERT Notebook</b></a>, <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_gpt_neox_20b.ipynb"><b>View
-                            GPT Neox Notebook</b></a>
+                            GPT-NeoX Notebook</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
