--- a/mldisastertweets/index.html
+++ b/mldisastertweets/index.html
@@ -3,7 +3,7 @@
 <head>
     <link href="/mldisastertweets/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <title>GPT2</title>
+    <title>BLOOM</title>
 </head>
 
 <body onload="load()">
@@ -20,7 +20,7 @@
         }
     </script>
     <header id="dashboard">
-        <h1><b>AI</b> GPT-NeoX-20B</h1>
+        <h1><b>BLOOM</b> LLM</h1>
         <hr>
         AI Text Classifier powered by a Large Language Model
         <hr>
@@ -31,12 +31,14 @@
                 <h2>CODE</h2>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_distilbert.ipynb">Fine-tuning
+                    <a
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_distilbert.ipynb">Fine-tuning
                         DistilBERT</a>
                 </p>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_gpt_neox_20b.ipynb">Fine-tuning
+                    <a
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_gpt_neox_20b.ipynb">Fine-tuning
                         GPT-NeoX-20B</a>
                 </p>
             </section>
