--- a/mldisastertweets/index.html
+++ b/mldisastertweets/index.html
@@ -3,7 +3,7 @@
 <head>
     <link href="/mldisastertweets/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <title>BLOOM</title>
+    <title>Disaster Tweets</title>
 </head>
 
 <body onload="load()">
@@ -20,7 +20,7 @@
         }
     </script>
     <header id="dashboard">
-        <h1><b>BLOOM</b> LLM</h1>
+        <h1><b>DISASTER</b> TWEETS</h1>
         <hr>
         AI Text Classifier powered by a Large Language Model
         <hr>
