--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -94,7 +94,8 @@
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_distilbert.ipynb"><b>View
                             DistilBERT Notebook</b></a>, <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_gpt_neox_20b.ipynb"><b>View
-                            GPT-NeoX Notebook</b></a>
+                            GPT-NeoX Notebook</b></a>, <a href="https://lyoh001.com/mldisastertweets"><b>View
+                            Demo</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
