--- a/mlgpt2/index.html
+++ b/mlgpt2/index.html
@@ -81,6 +81,12 @@
                         var http = new XMLHttpRequest();
                         http.open("POST", "api/mlgpt2", true);
                         http.setRequestHeader("Content-Type", "application/json");
+                        http.timeout = 120000;
+                        http.ontimeout = function () {
+                            console.log('Request timed out');
+                            chatWindow.removeChild(thinkingMessage);
+                            displayResponse('Request timed out');
+                        };
                         http.onreadystatechange = function () {
                             if (http.readyState == 4 && http.status == 200) {
                                 var response = http.responseText;
