--- a/mldisastertweets/index.html
+++ b/mldisastertweets/index.html
@@ -86,7 +86,7 @@
                         chatWindow.scrollTop = chatWindow.scrollHeight;
 
                         var http = new XMLHttpRequest();
-                        http.open("POST", "api/mlgpt2", true);
+                        http.open("POST", "api/mldisastertweets", true);
                         http.setRequestHeader("Content-Type", "application/json");
                         http.timeout = 120000;
                         http.ontimeout = function () {
