--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -83,18 +83,22 @@
                 </p>
             </section>
             <section>
-                <h3><b>NLP: Disaster Tweets using DistilBERT and GPT-NeoX-20B</b></h3>
+                <h3><b>NLP: Disaster Detection and Response with DistilBERT, GPT-NeoX-20B and Falcon-7B</b></h3>
                 <p>
-                    Built an NLP model using DistilBERT on a dataset of 284k disaster tweets, achieving over 90%
-                    accuracy. Additionally, a large language model, GPT-NeoX, with 20 billion parameters was fine-tuned
-                    using QLoRA.
+                    Used DistilBERT to build a fast and accurate NLP model for disaster tweet classification. The model
+                    was trained on 284k disaster-related tweets and achieved over 90% accuracy. The model was deployed
+                    to AWS Sagemaker inference endpoint for production-ready machine learning applications. Explored
+                    GPT-NeoX-20B and Falcon-7B for disaster response generation. Fine-tuned these models using QLoRA and
+                    evaluated their performance on various disaster scenarios.
                 </p>
                 <p>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_distilbert.ipynb"><b>View
                             DistilBERT Notebook</b></a>, <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_gpt_neox_20b.ipynb"><b>View
-                            GPT-NeoX Notebook</b></a>, <a href="https://lyoh001.com/mldisastertweets"><b>View
+                            GPT-NeoX Notebook</b></a>, <a
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_falcon_7b.ipynb"><b>View
+                            Falcon Notebook</b></a>, <a href="https://lyoh001.com/mldisastertweets"><b>View
                             Demo</b></a>
                 </p>
                 <p>
@@ -109,6 +113,12 @@
                 </p>
                 <p><img src="/mlportfolio/images/nlp.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+                <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <iframe src="https://www.youtube.com/embed/qzahWP6cCK0?start=0" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen
+                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
+                </p>
             </section>
             <section>
                 <h3><b>Stable Diffusion: AI-Generated Image Web Application</b></h3>
