--- a/mldisastertweets/index.html
+++ b/mldisastertweets/index.html
@@ -41,6 +41,12 @@
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_gpt_neox_20b.ipynb">Fine-tuning
                         GPT-NeoX-20B</a>
                 </p>
+                <p>
+                    <i class="fab fa-github" aria-hidden="true"></i>
+                    <a
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_falcon_7b.ipynb">Fine-tuning
+                        Falcon-7B</a>
+                </p>
             </section>
             <section>
                 <h2>DESIGN</h2>
