--- a/mldisastertweets/index.html
+++ b/mldisastertweets/index.html
@@ -61,7 +61,7 @@
                 <h2>AI-Powered Text Classifier</h2>
                 <div class="chat-window" id="chat-window"></div>
                 <div class="chat-input">
-                    <input type="text" id="feature1" placeholder="Type your message here..."
+                    <input type="text" id="feature1" placeholder="Enter tweet to identify disaster..."
                         onkeydown="handleKeyPress(event)">
                     <button onclick="predict()">Send</button>
                 </div>
