--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -16,16 +16,23 @@
     <main>
         <article id="mainRight">
             <section>
-                <h3><b>LLM: AI Text Generator powered by a Large Language Model</b></h3>
+                <h3><b>LLM: Disaster Detection and Response with DistilBERT, GPT-NeoX-20B and Falcon-7B</b></h3>
                 <p>
-                    Developed a web app that generates text based on user input. The data was cleaned and preprocessed
-                    using Regex, NLTK, Gensim, and SpaCy. The data was then visualised to gain insights. A large
-                    language model, GPT2, was fine-tuned with a custom dataset using PyTorch. The interactive app was
-                    built using Azure Function and Static Web apps.
+                    Used DistilBERT to build a fast and accurate NLP model for disaster tweet classification. The model
+                    was trained on 284k disaster-related tweets and achieved over 90% accuracy. The model was deployed
+                    to AWS Sagemaker inference endpoint for production-ready machine learning applications. Explored
+                    GPT-NeoX-20B and Falcon-7B for disaster response generation. Fine-tuned these models using QLoRA and
+                    evaluated their performance on various disaster scenarios.
                 </p>
                 <p>
-                    <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlgpt2/notebook/notebook.ipynb"><b>View
-                            Notebook</b></a>, <a href="https://lyoh001.com/mlgpt2"><b>View Demo</b></a>
+                    <a
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_distilbert.ipynb"><b>View
+                            DistilBERT Notebook</b></a>, <a
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_gpt_neox_20b.ipynb"><b>View
+                            GPT-NeoX Notebook</b></a>, <a
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_falcon_7b.ipynb"><b>View
+                            Falcon Notebook</b></a>, <a href="https://lyoh001.com/mldisastertweets"><b>View
+                            Demo</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -33,20 +40,14 @@
                     <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
                             alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/pytorch-161B22?logo=pytorch" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/spacy-161B22?logo=spacy" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/twitter-161B22?logo=twitter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
-                            alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
+                <p><img src="/mlportfolio/images/nlp.png"
+                        style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
                 <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
-                    <iframe src="https://www.youtube.com/embed/hkDXrdv3ZqE?start=0" frameborder="0"
+                    <iframe src="https://www.youtube.com/embed/qzahWP6cCK0?start=0" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
@@ -83,23 +84,16 @@
                 </p>
             </section>
             <section>
-                <h3><b>NLP: Disaster Detection and Response with DistilBERT, GPT-NeoX-20B and Falcon-7B</b></h3>
+                <h3><b>LLM: AI Text Generator powered by a Large Language Model</b></h3>
                 <p>
-                    Used DistilBERT to build a fast and accurate NLP model for disaster tweet classification. The model
-                    was trained on 284k disaster-related tweets and achieved over 90% accuracy. The model was deployed
-                    to AWS Sagemaker inference endpoint for production-ready machine learning applications. Explored
-                    GPT-NeoX-20B and Falcon-7B for disaster response generation. Fine-tuned these models using QLoRA and
-                    evaluated their performance on various disaster scenarios.
+                    Developed a web app that generates text based on user input. The data was cleaned and preprocessed
+                    using Regex, NLTK, Gensim, and SpaCy. The data was then visualised to gain insights. A large
+                    language model, GPT2, was fine-tuned with a custom dataset using PyTorch. The interactive app was
+                    built using Azure Function and Static Web apps.
                 </p>
                 <p>
-                    <a
-                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_distilbert.ipynb"><b>View
-                            DistilBERT Notebook</b></a>, <a
-                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_gpt_neox_20b.ipynb"><b>View
-                            GPT-NeoX Notebook</b></a>, <a
-                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_falcon_7b.ipynb"><b>View
-                            Falcon Notebook</b></a>, <a href="https://lyoh001.com/mldisastertweets"><b>View
-                            Demo</b></a>
+                    <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlgpt2/notebook/notebook.ipynb"><b>View
+                            Notebook</b></a>, <a href="https://lyoh001.com/mlgpt2"><b>View Demo</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -107,14 +101,20 @@
                     <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
                             alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pytorch-161B22?logo=pytorch" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/spacy-161B22?logo=spacy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/twitter-161B22?logo=twitter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
+                            alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
                 </p>
-                <p><img src="/mlportfolio/images/nlp.png"
-                        style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
                 <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
-                    <iframe src="https://www.youtube.com/embed/qzahWP6cCK0?start=0" frameborder="0"
+                    <iframe src="https://www.youtube.com/embed/hkDXrdv3ZqE?start=0" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
