--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -40,6 +40,16 @@
                     <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
                             alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pytorch-161B22?logo=pytorch" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/sklearn-161B22?logo=scikit-learn" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/spacy-161B22?logo=spacy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/twitter-161B22?logo=twitter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
+                            alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
                             alt="" /></a>
@@ -103,7 +113,6 @@
                     <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/pytorch-161B22?logo=pytorch" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/spacy-161B22?logo=spacy" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/twitter-161B22?logo=twitter" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
