--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -47,6 +47,7 @@
                     <a href="#"><img src="https://img.shields.io/badge/twitter-161B22?logo=twitter" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/aws-161B22?logo=amazonaws" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
                             alt="" /></a>
