--- a/mlgpt2/index.html
+++ b/mlgpt2/index.html
@@ -3,7 +3,7 @@
 <head>
     <link href="/mlgpt2/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <title>GPT2</title>
+    <title>Chatbot</title>
 </head>
 
 <body onload="load()">
@@ -20,9 +20,9 @@
         }
     </script>
     <header id="dashboard">
-        <h1><b>AI</b> GPT2</h1>
+        <h1><b>AI</b> Chatbot</h1>
         <hr>
-        AI Text Generator powered by a Large Language Model
+        AI Chatbot powered by a Large Language Model
         <hr>
     </header>
     <main>
@@ -31,8 +31,8 @@
                 <h2>CODE</h2>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlgpt2/notebook/notebook.ipynb">Fine-tuning
-                        GPT2</a>
+                    <a href="https://github.com/lyoh001/DLFalcon/blob/main/notebook/notebook.ipynb">Fine-tuning
+                        Falcon-7Ba>
                 </p>
             </section>
             <section>
@@ -45,7 +45,7 @@
         </article>
         <article id="mainRight">
             <section class="chat-selection" id="chat-selection">
-                <h2>AI-Powered Text Generator</h2>
+                <h2>AI-Powered Q&A Chatbot</h2>
                 <div class="chat-window" id="chat-window"></div>
                 <div class="chat-input">
                     <input type="text" id="feature1" placeholder="Type your message here..."
