--- a/mlgpt2/index.html
+++ b/mlgpt2/index.html
@@ -32,7 +32,7 @@
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
                     <a href="https://github.com/lyoh001/DLFalcon/blob/main/notebook/notebook.ipynb">Fine-tuning
-                        Falcon-7Ba>
+                        Falcon-7B</a>
                 </p>
             </section>
             <section>
