--- a/mlgpt2/index.html
+++ b/mlgpt2/index.html
@@ -20,7 +20,7 @@
         }
     </script>
     <header id="dashboard">
-        <h1><b>AI</b> Chatbot</h1>
+        <h1><b>AI</b> CHATBOT</h1>
         <hr>
         AI Chatbot powered by a Large Language Model
         <hr>
@@ -45,7 +45,7 @@
         </article>
         <article id="mainRight">
             <section class="chat-selection" id="chat-selection">
-                <h2>AI-Powered Q&A Chatbot</h2>
+                <h2>Generative AI-Powered Q&A Chatbot</h2>
                 <div class="chat-window" id="chat-window"></div>
                 <div class="chat-input">
                     <input type="text" id="feature1" placeholder="Type your message here..."
