--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -19,13 +19,18 @@
                 <h3><b>LLM: AI Chatbot powered by a Large Language Model</b></h3>
                 <p>
                     Created a chatbot that responds to user queries using natural language. Used a state-of-the-art
-                    language model, Falcon-7B, fine-tuned on a custom Q&A dataset with QLoRA. Deployed the model to a
-                    secure AWS Sagemaker for real-time inference requests. Built a web app using Azure Function and
-                    Static Web apps to showcase the chatbot functionality.
+                    language model, Falcon-7B, fine-tuned on a custom Q&A dataset with QLoRA, specifically Chatbot
+                    customer support FAQs from an E-commerce website. Compared the performance of the untrained and
+                    trained models by evaluating their responses to various prompts. Deployed the model to a secure AWS
+                    Sagemaker for real-time inference requests. Built a web app using Azure Function and Static Web apps
+                    to showcase the chatbot functionality. Uploaded the trained model to the Hugging Face Hub for later
+                    consumption.
                 </p>
                 <p>
-                    <a href="https://github.com/lyoh001/DLFalcon/blob/main/notebook/notebook.ipynb"><b>View
-                            Notebook</b></a>, <a href="https://lyoh001.com/mlgpt2"><b>View Demo</b></a>
+                </p>
+
+                <p> <a href="https://github.com/lyoh001/DLFalcon"><b>View
+                            GitHub</b></a>, <a href="https://lyoh001.com/mlgpt2"><b>View Demo</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -34,9 +39,13 @@
                             alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/pytorch-161B22?logo=pytorch" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/sklearn-161B22?logo=scikit-learn" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/spacy-161B22?logo=spacy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/twitter-161B22?logo=twitter" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/aws-161B22?logo=amazonaws" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
                             alt="" /></a>
@@ -46,6 +55,12 @@
                 </p>
                 <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
                     <iframe src="https://www.youtube.com/embed/hkDXrdv3ZqE?start=0" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen
+                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
+                </p>
+                <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <iframe src="https://www.youtube.com/embed/-vD_kHpCwRY?start=0" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
@@ -92,36 +107,6 @@
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
                 <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
                     <iframe src="https://www.youtube.com/embed/qzahWP6cCK0?start=0" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen
-                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
-                </p>
-            </section>
-            <section>
-                <h3><b>LLM: Fine-tuned Falcon-7B LLM with QLoRA on a Custom Dataset</b></h3>
-                <p>
-                    Fine-tuned a large language model, Falcon, with 7 billion parameters on a custom dataset using
-                    QLoRA, specifically Chatbot customer support FAQs from an E-commerce website. Implemented a QLoRA
-                    adaptor and conducted the fine-tuning process.
-                    Compared the performance of the untrained and trained models by evaluating their responses to
-                    various prompts. Uploaded the trained model to the Hugging Face Hub for later consumption.
-                </p>
-                <p>
-                    <a href="https://github.com/lyoh001/DLFalcon"><b>View
-                            GitHub</b></a>
-                </p>
-                <p>
-                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
-                            alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
-                            alt="" /></a>
-                </p>
-                <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
-                    <iframe src="https://www.youtube.com/embed/-vD_kHpCwRY?start=0" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
