--- a/devopsportfolio/index.html
+++ b/devopsportfolio/index.html
@@ -16,17 +16,18 @@
     <main>
         <article id="mainRight">
             <section>
-                <h3><b>AI Text Generator powered by a Large Language Model</b></h3>
+                <h3><b>AI Chatbot powered by a Large Language Model</b></h3>
                 <p>
-                    Developed a web app that generates text based on user input. The data was cleaned and preprocessed
-                    using Regex, NLTK, Gensim, and SpaCy. The data was then visualized to gain insights. A large
-                    language model,
-                    GPT2, was fine-tuned with a custom dataset using PyTorch. The interactive app was built using Azure
-                    Function and Static Web apps.
+                    Created a chatbot that responds to user queries using natural language. Used a state-of-the-art
+                    language model, Falcon-7B, fine-tuned on a custom Q&A dataset with QLoRA, specifically Chatbot
+                    customer support FAQs from an E-commerce website. Compared the performance of the untrained and
+                    trained models by evaluating their responses to various prompts. Deployed the model to a secure AWS
+                    Sagemaker for real-time inference requests. Built a web app using Azure Function and Static Web apps
+                    to showcase the chatbot functionality. Uploaded the trained model to the Hugging Face Hub for later
+                    consumption.
                 </p>
-                <p>
-                    <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlgpt2/notebook/notebook.ipynb"><b>View
-                            Notebook</b></a>, <a href="https://lyoh001.com/mlgpt2"><b>View Demo</b></a>
+                <p> <a href="https://github.com/lyoh001/DLFalcon"><b>View
+                            GitHub</b></a>, <a href="https://lyoh001.com/mlgpt2"><b>View Demo</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -35,9 +36,13 @@
                             alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/pytorch-161B22?logo=pytorch" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/sklearn-161B22?logo=scikit-learn" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/spacy-161B22?logo=spacy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/twitter-161B22?logo=twitter" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/aws-161B22?logo=amazonaws" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
                             alt="" /></a>
@@ -47,6 +52,12 @@
                 </p>
                 <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
                     <iframe src="https://www.youtube.com/embed/hkDXrdv3ZqE?start=0" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen
+                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
+                </p>
+                <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <iframe src="https://www.youtube.com/embed/-vD_kHpCwRY?start=0" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
