--- a/mlcenitex/index.html
+++ b/mlcenitex/index.html
@@ -31,8 +31,13 @@
                 <h2>CODE</h2>
                 <p>
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.com/lyoh001/DLFalcon/blob/main/notebook/notebook.ipynb">Fine-tuning
-                        Falcon-7B</a>
+                    <a
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcenitex/notebook/fine_tune.ipynb">Fine-tuning</a>
+                </p>
+                <p>
+                    <i class="fab fa-github" aria-hidden="true"></i>
+                    <a
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcenitex/notebook/deploy.ipynb">Deployment</a>
                 </p>
             </section>
             <section>
