--- a/mlcenitex/index.html
+++ b/mlcenitex/index.html
@@ -50,7 +50,7 @@
         </article>
         <article id="mainRight">
             <section class="chat-selection" id="chat-selection">
-                <h2>Generative AI-Powered Q&A Chatbot</h2>
+                <h2>Generative AI-Powered Knowledge Base Bot</h2>
                 <div class="chat-window" id="chat-window"></div>
                 <div class="chat-input">
                     <input type="text" id="feature1" placeholder="Type your message here..."
