--- a/mlcenitex/index.html
+++ b/mlcenitex/index.html
@@ -76,7 +76,7 @@
                         var thinkingMessage = document.createElement("div");
                         thinkingMessage.textContent = "Thinking...It may take up to 30 seconds due to compute resources.";
                         thinkingMessage.style.textAlign = "left";
-                        thinkingMessage.style.color = "#8ECAE6";
+                        thinkingMessage.style.color = "#1DB2A9";
                         thinkingMessage.style.fontWeight = "bold";
                         thinkingMessage.style.maxWidth = "500px";
                         thinkingMessage.style.marginBottom = "10px"
@@ -105,7 +105,7 @@
                         var index = 0;
                         var aiResponseMessage = document.createElement("div");
                         aiResponseMessage.style.textAlign = "left";
-                        aiResponseMessage.style.color = "#8ECAE6";
+                        aiResponseMessage.style.color = "#1DB2A9";
                         aiResponseMessage.style.fontWeight = "bold";
                         aiResponseMessage.style.maxWidth = "500px";
                         aiResponseMessage.style.marginBottom = "10px"
